--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
   },
@@ -22,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.3.1"
   },
   "devDependencies": {
